@startuml

title __GEOGRAPHICALOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.redis {
    namespace filterOperator.geoperators.geographicalOperators {
      abstract class gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.GeographicalOperator {
          + getOperatorExpression()
          # GeographicalOperator()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    namespace filterOperator.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.OperatorGeoNearestNeighbors {
          - neighbors : int
          {static} + newOperatorGeoNearestNeighbors()
          - OperatorGeoNearestNeighbors()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    namespace filterOperator.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.OperatorInGeoCircle {
          {static} + newOperatorInGeoCircle()
          - OperatorInGeoCircle()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    namespace filterOperator.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.OperatorInGeoPolygon {
          {static} + newOperatorInGeoPolygon()
          - OperatorInGeoPolygon()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    namespace filterOperator.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.OperatorInGeoRectangle {
          {static} + newOperatorInGeoRectangle()
          - OperatorInGeoRectangle()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redis {
    namespace filterOperator.geoperators.geographicalOperators {
      class gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.RedisGeographicalOperatorFactory {
          + newOperatorGeoNearestNeighbors()
          + newOperatorInGeoCircle()
          + newOperatorInGeoPolygon()
          + newOperatorInGeoRectangle()
      }
    }
  }
  

  gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.GeographicalOperator -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.OperatorGeoNearestNeighbors -up-|> gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.OperatorInGeoCircle -up-|> gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.OperatorInGeoPolygon -up-|> gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.OperatorInGeoRectangle -up-|> gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.GeographicalOperator
  gr.ds.unipi.noda.api.redis.filterOperator.geoperators.geographicalOperators.RedisGeographicalOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.geoperators.geographicalOperators.BaseGeographicalOperatorFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
